--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Forgot Password</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,40 +13,37 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #e9ecef; 
-            margin: 0; 
+            background-color: #f0f0f0;
         }
-        .login-container {
+        .container {
             background-color: white;
             padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             width: 300px;
         }
         h2 {
             margin-bottom: 20px;
             text-align: center;
-            color: #343a40;
         }
         .form-group {
             margin-bottom: 15px;
         }
-        input[type="email"], input[type="password"] {
+        input[type="email"] {
             width: 100%;
-            padding: 12px;
-            border: 1px solid #ced4da;
-            border-radius: 5px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
             box-sizing: border-box;
         }
         button {
             width: 100%;
-            padding: 12px;
+            padding: 10px;
             background-color: #007bff;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s;
         }
         button:hover {
             background-color: #0056b3;
@@ -61,43 +58,47 @@
         .back-link:hover {
             text-decoration: underline;
         }
+        .message {
+            margin-top: 15px;
+            text-align: center;
+            color: green;
+        }
         .error {
             color: red;
-            text-align: center;
         }
     </style>
 </head>
 <body>
 
-<div class="login-container">
-    <h2>Login</h2>
-    <form id="loginForm">
+<div class="container">
+    <h2>Forgot Password</h2>
+    <form id="resetForm">
         <div class="form-group">
-            <input type="email" id="email" placeholder="Email" required>
+            <label for="email">Enter your email address:</label>
+            <input type="email" id="email" name="email" required>
         </div>
-        <div class="form-group">
-            <input type="password" id="password" placeholder="Password" required>
-        </div>
-        <button type="submit">Login</button>
-        <div id="error" class="error"></div>
+        <button type="submit">Reset Password</button>
     </form>
-    <a href="./register.html" class="back-link">Register</a>
-    <a href="./forgotpassword.html" class="back-link">Forgot Password?</a>
+    <a href="./index.html" class="back-link">Back to Login</a>
+    <div id="message" class="message"></div>
+    <div id="error" class="error"></div>
 </div>
 
 <script>
-    document.getElementById('loginForm').addEventListener('submit', function(event) {
+    document.getElementById('resetForm').addEventListener('submit', function(event) {
         event.preventDefault(); // Prevent form submission
 
         const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
         const user = JSON.parse(localStorage.getItem('user'));
 
-        if (user && user.email === email && user.password === password) {
-            // Redirect to the specified URL on successful login
-            window.location.href = './Finishedproduct.html'; // Your target URL
+        if (user && user.email === email) {
+            // If email matches, display the password (not secure!)
+            document.getElementById('message').textContent = `Your password is: ${user.password}`;
+            document.getElementById('error').textContent = ''; // Clear any previous error messages
         } else {
-            document.getElementById('error').textContent = 'Invalid email or password!';
+            // If no match, show an error
+            document.getElementById('error').textContent = 'Email not found!';
+            document.getElementById('message').textContent = ''; // Clear any previous success messages
         }
     });
 </script>
