--- a/register.html
+++ b/register.html
@@ -95,7 +95,7 @@
         </div>
         <button type="submit">Register</button>
     </form>
-    <a href="file:///C:/Users/Dr%20Afshan%20Jamil/Desktop/abdul/login%20page%20(2).html" class="back-link">Back</a>
+    <a href="./index.html" class="back-link">Back</a>
 </div>
 
 <script>
